Try to fix the create-counter-button width on mobile. Still not fixed

--- a/src/styles/components/_create-counter-button.scss
+++ b/src/styles/components/_create-counter-button.scss
@@ -5,21 +5,12 @@
   font-size: 24px;
   min-width: 50px;
   width: auto;
-}
 
-.create-counter-button--editing {
-}
-
-.create-counter-form {
-  width: 0;
-  overflow: hidden;
-  input {
-    text-align: left !important;
-    font-size: 20px;
-  }
-  transition: width 250ms;
-
-  .create-counter-button--editing & {
-    width:400px;
+  &__form {
+    margin-left: 7px;
+    input {
+      text-align: left !important;
+      font-size: 20px;
+    }
   }
 }
